Fixed a problem where the short title wasn't being hidden by default.

--- a/webapp/src/main/webapp/public/resources/style.css
+++ b/webapp/src/main/webapp/public/resources/style.css
@@ -1738,3 +1738,7 @@ table.ias-table, table.ias-table td {
     font-family: monospace;
     white-space: pre;
 }
+
+.title-short {
+    display: none;
+}
